<resources>
    <string name="app_name">Assist DR</string>

    <!--    Web Client Id Override-->
    <!--            <string name="default_web_client_id">512924826184-jiv730c0l5cvd2qjpcck7hqd95gqt1dg.apps.googleusercontent.com</string>-->

    <!--  Menu Item Strings  -->
    <string name="menu_item_dashboard">Dashboard</string>
    <string name="menu_item_appointment">Appointments</string>
    <string name="menu_item_eprescription">E-Prescription</string>
    <string name="menu_item_notification">Notifications</string>
    <string name="menu_item_more">More</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  Login Fragment  -->
    <string name="enter_your_email">Email</string>
    <string name="enter_your_password">Password</string>
    <string name="save_password">Save Password</string>
    <string name="btn_log_in">Log In</string>
    <string name="enter_your_name">Name</string>
    <string name="enter_your_phone_number">Phone Number</string>
    <string name="confirm_your_password">Confirm Your Password</string>
    <string name="sign_up">Sign Up</string>

    <string name="tab_layout">Tab Layout</string>
    <string name="floating_button">Floating Button</string>

    <string name="today_s_appointments">Today\'s Appointments</string>
    <string name="appointment_image">Appointment Image</string>
    <string name="custom_appointments_count">00</string>
    <string name="custom_patients_count">00</string>
    <string name="custom_notifications_count">00</string>
    <string name="custom_thismonth_count">00</string>
</resources>