<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuitem_dashboard"
        android:icon="@drawable/ic_baseline_dashboard_24"
        android:title="@string/menu_item_dashboard" />

    <item
        android:id="@+id/menuitem_appointment"
        android:icon="@drawable/ic_baseline_perm_contact_calendar_24"
        android:title="@string/menu_item_appointment" />

    <item
        android:id="@+id/menuitem_eprescription"
        android:icon="@drawable/ic_baseline_insert_drive_file_24"
        android:title="@string/menu_item_eprescription" />

<!--    <item-->
<!--        android:id="@+id/menuitem_notification"-->
<!--        android:icon="@drawable/ic_baseline_notifications_24"-->
<!--        android:title="@string/menu_item_notification" />-->

    <item
        android:id="@+id/menuitem_more"
        android:icon="@drawable/ic_baseline_menu_24"
        android:title="@string/menu_item_more" />
</menu>