<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LogInFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/custom_editTextTextEmailAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingLeft="20dp"
            android:paddingTop="12dp"
            android:paddingRight="20dp"
            android:paddingBottom="12dp"
            android:textColorHint="#757575"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/custom_editTextPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent=".8"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/custom_editTextPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingLeft="20dp"
            android:paddingTop="12dp"
            android:paddingRight="20dp"
            android:paddingBottom="12dp"
            android:textColorHint="#757575"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent=".8"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/custom_login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/btn_log_in"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/custom_editTextPassword"
            app:layout_constraintWidth_percent=".4" />

        <CheckBox
            android:id="@+id/custom_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_password"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/custom_editTextPassword"
            app:layout_constraintTop_toBottomOf="@+id/custom_editTextPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>