<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/custom_editTextTextPersonName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_your_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingLeft="15dp"
            android:paddingTop="6dp"
            android:paddingRight="15dp"
            android:paddingBottom="6dp"
            android:textColorHint="#757575"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/custom_editTextTextEmailAddress2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent=".8"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/custom_editTextTextEmailAddress2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingLeft="15dp"
            android:paddingTop="6dp"
            android:paddingRight="15dp"
            android:paddingBottom="6dp"
            android:textColorHint="#757575"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/custom_editTextPhone2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent=".8"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/custom_editTextPhone2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_your_phone_number"
            android:inputType="phone"
            android:minHeight="48dp"
            android:paddingLeft="15dp"
            android:paddingTop="6dp"
            android:paddingRight="15dp"
            android:paddingBottom="6dp"
            android:textColorHint="#757575"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/custom_editTextTextPassword2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent=".8"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <EditText
            android:id="@+id/custom_editTextTextPassword2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingLeft="15dp"
            android:paddingTop="6dp"
            android:paddingRight="15dp"
            android:paddingBottom="6dp"
            android:textColorHint="#757575"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent=".8"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/custom_editTextTextConfirmPassword2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/confirm_your_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingLeft="15dp"
            android:paddingTop="6dp"
            android:paddingRight="15dp"
            android:paddingBottom="6dp"
            android:textColorHint="#757575"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/custom_editTextTextPassword2"
            app:layout_constraintWidth_percent=".8"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/custom_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/sign_up"
            android:textSize="16sp"
            app:cornerRadius="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/custom_editTextTextConfirmPassword2"
            app:layout_constraintWidth_percent=".4"
            tools:ignore="TextContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>