<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/replaceable_frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DashBoardFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/custom_outercard1"
                android:layout_width="match_parent"
                android:layout_height="250dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/custom_innercard1"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginBottom="32dp"
                    android:background="@drawable/ic_bg_card"
                    android:clickable="false"
                    android:elevation="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent=".65"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintWidth_percent=".80">

                    <TextView
                        android:id="@+id/custom_appointment_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="24dp"
                        android:fontFamily="@font/fredoka_bold"
                        android:text="@string/custom_appointments_count"
                        android:textColor="@color/text_color_dark"
                        android:textSize="34sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="TextContrastCheck" />

                    <TextView
                        android:id="@+id/custom_text_appointment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginBottom="24dp"
                        android:fontFamily="@font/fredoka_medium"
                        android:text="@string/today_s_appointments"
                        android:textColor="@color/colorWhite"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <ImageView
                    android:id="@+id/custom_cardimage1"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:contentDescription="@string/appointment_image"
                    android:elevation="50dp"
                    android:src="@drawable/ic_img_appointment"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/custom_outercard2"
                android:layout_width="match_parent"
                android:layout_height="250dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/custom_innercard2"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginBottom="32dp"
                    android:background="@drawable/ic_bg_card"
                    android:clickable="false"
                    android:elevation="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent=".65"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintWidth_percent=".80">

                    <TextView
                        android:id="@+id/custom_patients_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="24dp"
                        android:fontFamily="@font/fredoka_bold"
                        android:text="@string/custom_patients_count"
                        android:textColor="@color/text_color_dark"
                        android:textSize="34sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="TextContrastCheck" />

                    <TextView
                        android:id="@+id/custom_text_patients"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginBottom="24dp"
                        android:fontFamily="@font/fredoka_medium"
                        android:text="Total Patients Arrived"
                        android:textColor="@color/colorWhite"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <ImageView
                    android:id="@+id/custom_cardimage2"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:contentDescription="Patients Image"
                    android:elevation="50dp"
                    android:src="@drawable/ic_img_patient"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/custom_outercard3"
                android:layout_width="match_parent"
                android:layout_height="250dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/custom_innercard3"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginBottom="32dp"
                    android:background="@drawable/ic_bg_card"
                    android:clickable="false"
                    android:elevation="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent=".65"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintWidth_percent=".80">

                    <TextView
                        android:id="@+id/custom_notifications_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="24dp"
                        android:fontFamily="@font/fredoka_bold"
                        android:text="@string/custom_notifications_count"
                        android:textColor="@color/text_color_dark"
                        android:textSize="34sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="TextContrastCheck" />

                    <TextView
                        android:id="@+id/custom_text_notifications"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginBottom="24dp"
                        android:fontFamily="@font/fredoka_medium"
                        android:text="Notifications"
                        android:textColor="@color/colorWhite"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <ImageView
                    android:id="@+id/custom_cardimage3"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:contentDescription="Notifications Image"
                    android:elevation="50dp"
                    android:src="@drawable/ic_img_notification"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/custom_outercard4"
                android:layout_width="match_parent"
                android:layout_height="250dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/custom_innercard4"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginBottom="32dp"
                    android:background="@drawable/ic_bg_card"
                    android:clickable="false"
                    android:elevation="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent=".65"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintWidth_percent=".80">

                    <TextView
                        android:id="@+id/custom_thismonth_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="24dp"
                        android:fontFamily="@font/fredoka_bold"
                        android:text="@string/custom_thismonth_count"
                        android:textColor="@color/text_color_dark"
                        android:textSize="34sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="TextContrastCheck" />

                    <TextView
                        android:id="@+id/custom_text_thismonth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginBottom="24dp"
                        android:fontFamily="@font/fredoka_medium"
                        android:text="Patients this Month"
                        android:textColor="@color/colorWhite"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <ImageView
                    android:id="@+id/custom_cardimage4"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:contentDescription="Calendar Image"
                    android:elevation="50dp"
                    android:src="@drawable/ic_img_thismonth"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ImageContrastCheck" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/custom_outercard5"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>